Combo calculation bug fixes, made result text wrap

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,12 +12,12 @@ Description: This file contains the styles for calculator.html
 body {
     background-color: antiquewhite;
     text-align: center;
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 table {
@@ -48,9 +48,7 @@ button[type=button], button[type="submit"] {
 
 input[type="text"] {
     overflow: auto;
-    /* Add scrollbars if content overflows */
     padding: 30px;
-    /* Add padding for better appearance */
     resize: both;
     background-color: rgb(73, 111, 138);
     color: lightcyan;
@@ -58,6 +56,9 @@ input[type="text"] {
     font-weight: bold;
     border: none;
     border-radius: 1px;
+
+    width: 100%;
+    text-align: center;
 }
 .calculator {
     position: relative;
@@ -69,15 +70,29 @@ input[type="text"] {
     margin-top: 10px;
 }
 
+/*
 #result-field {
     overflow: auto;
-    /* Add scrollbars if content overflows */
     padding: 30px;
     resize: both;
     background-color: #496f8a;
     color: lightcyan;
     font-size: 24px;
     font-weight: bold;
+    border: none;
+    border-radius: 1px;
+}
+*/
+
+#result-value {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    resize: both;
+    padding: 30px;
+    background-color: #496f8a;
+    color: lightcyan;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
     border: none;
     border-radius: 1px;
 }
